Create images folder with images, add images to recipe pages

--- a/recipes/nachos.html
+++ b/recipes/nachos.html
@@ -9,7 +9,7 @@
     <h1>Nachos</h1>
     <h2>My favorite dish since childhood</h2>
     <br>
-    <img src="">
+    <img src="images/Nachos.jpg">
     <p>Placeholder for long personal story about nachos.</p>
     <h3>Ingredients</h3>
     <ul>
