--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
     <h1>Pizza</h1>
     <h2>America's Favorite Food</h2>
     <br>
-    <img src="">
+    <img src="images/Pizza.jpg">
     <p>Placeholder for long personal story about pizza after a statistic about pizza consumption in the united states</p>
     <h3>Ingredients</h3>
     <ul>
