--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <h1>Lasagna</h1>
     <h2>How Lasagna changed my life</h2>
     <br>
-    <img src="">
+    <img src="images/Lasagna.jpg">
     <p>Placeholder for long personal story about lasagna</p>
     <h3>Ingredients</h3>
     <ul>
